force-app/main/default/objects/Application__c/fields/Application_Progress__c.field-meta.xml
<CustomField>
    <fullName>Application_Progress__c</fullName>
    <formula>Completed_Interviews__c / 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Progress</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>