force-app/main/default/objects/Application__c/fields/Average_Interview_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_Interview_Score__c</fullName>
    <formula>Sum_of_AVG_Interview__c /  Count_of_AVG_Interview__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Interview Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>