force-app/main/default/objects/Application__c/fields/Completed_Interviews__c.field-meta.xml
<CustomField>
    <fullName>Completed_Interviews__c</fullName>
    <label>Completed Interviews</label>
    <summaryFilterItems>
        <field>Interview__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Interview__c.Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>