force-app/main/default/objects/Application__c/fields/Count_of_AVG_Interview__c.field-meta.xml
<CustomField>
    <fullName>Count_of_AVG_Interview__c</fullName>
    <label>Count of AVG Interview</label>
    <summaryForeignKey>Interview__c.Application__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>