force-app/main/default/objects/Application__c/fields/Days_in_Stage__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Stage__c</fullName>
    <formula>TODAY() -  Last_Stage_Change_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Stage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>