force-app/main/default/objects/Application__c/fields/Match_Score__c.field-meta.xml
<CustomField>
    <fullName>Match_Score__c</fullName>
    <description>Percent</description>
    <inlineHelpText>Represents how well the candidate matches the specific position requirements. The score is calculated using required skills, proficiency levels, experience, and other job-related criteria for this application.</inlineHelpText>
    <label>Match Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>