force-app/main/default/objects/Application__c/fields/SLA_Breach__c.field-meta.xml
<CustomField>
    <fullName>SLA_Breach__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLA Breach</label>
    <type>Checkbox</type>
</CustomField>