force-app/main/default/objects/Application__c/fields/SLA_Breach_Date__c.field-meta.xml
<CustomField>
    <fullName>SLA_Breach_Date__c</fullName>
    <label>SLA Breach Date</label>
    <type>Date</type>
</CustomField>