force-app/main/default/objects/Application__c/fields/SLA_Max_Days__c.field-meta.xml
<CustomField>
    <fullName>SLA_Max_Days__c</fullName>
    <label>SLA Max Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>