force-app/main/default/objects/Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Screening</fullName>
            </value>
            <value>
                <fullName>Interview 1</fullName>
            </value>
            <value>
                <fullName>Interview 2</fullName>
            </value>
            <value>
                <fullName>Interview 3</fullName>
            </value>
            <value>
                <fullName>Interview 4</fullName>
            </value>
            <value>
                <fullName>Interview 5</fullName>
            </value>
            <value>
                <fullName>Hired</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>