force-app/main/default/objects/Application__c/fields/Sum_of_AVG_Interview__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_AVG_Interview__c</fullName>
    <label>Sum of AVG Interview</label>
    <summarizedField>Interview__c.Average_Interview_Score__c</summarizedField>
    <summaryForeignKey>Interview__c.Application__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>