force-app/main/default/objects/Application__c/validationRules/Rejection_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejection_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, &quot;Rejected&quot;),
  ISBLANK(Rejection_Reason__c)
)</errorConditionFormula>
    <errorDisplayField>Rejection_Reason__c</errorDisplayField>
    <errorMessage>Rejection Reason is required when candidate is Rejected</errorMessage>
</ValidationRule>