force-app/main/default/objects/Application__c/listViews/Main.listView-meta.xml
<ListView>
    <fullName>Main</fullName>
    <columns>NAME</columns>
    <columns>Candidate__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Match_Score__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>Main</label>
</ListView>